--- a/Starter_Files/ETL_Mini_Project_BSerino_VSingh.ipynb
+++ b/Starter_Files/ETL_Mini_Project_BSerino_VSingh.ipynb
@@ -21,8 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -187,7 +189,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,6 +198,45 @@
     "# Read the data into a Pandas DataFrame\n",
     "crowdfunding_info_df = pd.read_excel('Resources/crowdfunding.xlsx')\n",
     "crowdfunding_info_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column                   Non-Null Count  Dtype \n",
+      "---  ------                   --------------  ----- \n",
+      " 0   cf_id                    1000 non-null   int64 \n",
+      " 1   contact_id               1000 non-null   int64 \n",
+      " 2   company_name             1000 non-null   object\n",
+      " 3   blurb                    1000 non-null   object\n",
+      " 4   goal                     1000 non-null   int64 \n",
+      " 5   pledged                  1000 non-null   int64 \n",
+      " 6   outcome                  1000 non-null   object\n",
+      " 7   backers_count            1000 non-null   int64 \n",
+      " 8   country                  1000 non-null   object\n",
+      " 9   currency                 1000 non-null   object\n",
+      " 10  launched_at              1000 non-null   int64 \n",
+      " 11  deadline                 1000 non-null   int64 \n",
+      " 12  staff_pick               1000 non-null   bool  \n",
+      " 13  spotlight                1000 non-null   bool  \n",
+      " 14  category & sub-category  1000 non-null   object\n",
+      "dtypes: bool(2), int64(7), object(6)\n",
+      "memory usage: 103.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -257,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -269,13 +310,205 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cf_id</th>\n",
+       "      <th>contact_id</th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>blurb</th>\n",
+       "      <th>goal</th>\n",
+       "      <th>pledged</th>\n",
+       "      <th>outcome</th>\n",
+       "      <th>backers_count</th>\n",
+       "      <th>country</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>launched_at</th>\n",
+       "      <th>deadline</th>\n",
+       "      <th>staff_pick</th>\n",
+       "      <th>spotlight</th>\n",
+       "      <th>category &amp; sub-category</th>\n",
+       "      <th>category</th>\n",
+       "      <th>subcategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>147</td>\n",
+       "      <td>4661</td>\n",
+       "      <td>Baldwin, Riley and Jackson</td>\n",
+       "      <td>Pre-emptive tertiary standardization</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CAD</td>\n",
+       "      <td>1581573600</td>\n",
+       "      <td>1614578400</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>food/food trucks</td>\n",
+       "      <td>food</td>\n",
+       "      <td>food trucks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1621</td>\n",
+       "      <td>3765</td>\n",
+       "      <td>Odom Inc</td>\n",
+       "      <td>Managed bottom-line architecture</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>14560</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>158</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1611554400</td>\n",
+       "      <td>1621918800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>music/rock</td>\n",
+       "      <td>music</td>\n",
+       "      <td>rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1812</td>\n",
+       "      <td>4187</td>\n",
+       "      <td>Melton, Robinson and Fritz</td>\n",
+       "      <td>Function-based leadingedge pricing structure</td>\n",
+       "      <td>108400</td>\n",
+       "      <td>142523</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>1425</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>AUD</td>\n",
+       "      <td>1608184800</td>\n",
+       "      <td>1640844000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>technology/web</td>\n",
+       "      <td>technology</td>\n",
+       "      <td>web</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2156</td>\n",
+       "      <td>4941</td>\n",
+       "      <td>Mcdonald, Gonzalez and Ross</td>\n",
+       "      <td>Vision-oriented fresh-thinking conglomeration</td>\n",
+       "      <td>4200</td>\n",
+       "      <td>2477</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>24</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1634792400</td>\n",
+       "      <td>1642399200</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>music/rock</td>\n",
+       "      <td>music</td>\n",
+       "      <td>rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1365</td>\n",
+       "      <td>2199</td>\n",
+       "      <td>Larson-Little</td>\n",
+       "      <td>Proactive foreground core</td>\n",
+       "      <td>7600</td>\n",
+       "      <td>5265</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>53</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1608530400</td>\n",
+       "      <td>1629694800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>theater/plays</td>\n",
+       "      <td>theater</td>\n",
+       "      <td>plays</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cf_id  contact_id                 company_name  \\\n",
+       "0    147        4661   Baldwin, Riley and Jackson   \n",
+       "1   1621        3765                     Odom Inc   \n",
+       "2   1812        4187   Melton, Robinson and Fritz   \n",
+       "3   2156        4941  Mcdonald, Gonzalez and Ross   \n",
+       "4   1365        2199                Larson-Little   \n",
+       "\n",
+       "                                           blurb    goal  pledged     outcome  \\\n",
+       "0           Pre-emptive tertiary standardization     100        0      failed   \n",
+       "1               Managed bottom-line architecture    1400    14560  successful   \n",
+       "2   Function-based leadingedge pricing structure  108400   142523  successful   \n",
+       "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
+       "4                      Proactive foreground core    7600     5265      failed   \n",
+       "\n",
+       "   backers_count country currency  launched_at    deadline  staff_pick  \\\n",
+       "0              0      CA      CAD   1581573600  1614578400       False   \n",
+       "1            158      US      USD   1611554400  1621918800       False   \n",
+       "2           1425      AU      AUD   1608184800  1640844000       False   \n",
+       "3             24      US      USD   1634792400  1642399200       False   \n",
+       "4             53      US      USD   1608530400  1629694800       False   \n",
+       "\n",
+       "   spotlight category & sub-category    category  subcategory  \n",
+       "0      False        food/food trucks        food  food trucks  \n",
+       "1       True              music/rock       music         rock  \n",
+       "2      False          technology/web  technology          web  \n",
+       "3      False              music/rock       music         rock  \n",
+       "4      False           theater/plays     theater        plays  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crowdfunding_info_df[['category','subcategory']] = \\\n",
+    "crowdfunding_info_df['category & sub-category'].str.split('/', n=2, expand=True)\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
@@ -3700,7 +3933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
